trả về danh sách sinh viên của tiết học (Lesson) đấy nếu kích chuột vào Lesson ở trang thời khóa biểu
code no2:
Step 1:thêm cột ID cho table [all] vì em không muốn để key là {group;course;instructor;slot;room;date} vì nó nhiều cột nên sẽ phúc tạp sau này(đoán)
Step 2: thêm bảng [Group] (nghĩa là một lớp, ví dụ : se1634) và bảng [Student] (có key là student ID, ví dụ HE150652). Thêm 2 ràng buộc giữa một [Group] với nhiều  [all], và một  [Group] với nhiều [Student]. sau đó thêm vào 4 Student, 2 Group, 5 Lesson làm ví dụ
Step 3: (code trên NetBean)
tạo trang attendanceForALesson.jsp (truy cập từ link ở trang  thời khóa biểu) để đánh dấu điểm danh cho sv mỗi Lesson. có Servlet attendenceForALesson.java sẽ nhận input là LessonID (cái này là key của bảng [all]) và sẽ trả về danh sách sv của Group của Lesson đó (hiện mới code phần doget() để trả về danh sách sv, còn thiếu phần đánh dấu điểm danh).

--- a/Assignment/web/WEB-INF/web.xml
+++ b/Assignment/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>timetable</servlet-name>
         <servlet-class>controler.timetable</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>attendanceForALesson</servlet-name>
+        <servlet-class>controler.attendanceForALesson</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>timetable</servlet-name>
         <url-pattern>/timetable</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>attendanceForALesson</servlet-name>
+        <url-pattern>/attendanceForALesson</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
