tạo table [Week] key là numberOfWeek, khóa ngoại numberOfWeek cho table [All]
1, Lý do tạo table Week (tuần): mỗi lần người dùng chọn week trong timetable, DB sẽ chỉ trả về danh sách các Lesson trong week đó.
2, servlet start.java :
tự động tạo table Week, insert 53 week trong năm 2022 bắt đầu từ mồng 3 tháng 1(ngày bắt đầu em xem trên fap).số thứ tự insert chính là key.
tự động tạo table Group rồi đến Student, All. tự thêm các constraint
(ko tự động insert nên phải chạy file "insert example row for GroupStudentAll.sql")

--- a/Assignment/web/WEB-INF/web.xml
+++ b/Assignment/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>attendanceForALesson</servlet-name>
         <servlet-class>controler.attendanceForALesson</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>start</servlet-name>
+        <servlet-class>controler.start</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>timetable</servlet-name>
         <url-pattern>/timetable</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>attendanceForALesson</servlet-name>
         <url-pattern>/attendanceForALesson</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>start</servlet-name>
+        <url-pattern>/start</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
