Sửa lại UI và thứ tự mà người dùng sẽ nhập, nhấn và chọn.
Code no 4.95:
Trên trang timetable, người dùng sẽ chọn Campus, rồi gõ tên Lecture muốn tìm và ấn nút View (submit).
Sau đó bảng của trang này sẽ hiển thị các Lesson của Lecture vừa gõ tên, và đó là tuần của ngày hôm nay(hiện tại).
Tiếp theo, nếu người dùng muốn xem các tuần khác thì chọn tuần trong thẻ <select>.
B1: Vì em muốn phần hiển thị của mỗi Lesson trong timetable phải có chứa tên môn học. Nên, đã sửa lại model Lesson: thay vì chứa String groupID thì sẽ chứa hẳn một Group. Một Group lại chứa một Course. Một Course lại chứa String CourseName.
B2: Làm lại câu lệnh SQL phần tìm các Lesson theo Instructor và Week. (thêm việc tìm theo tên Instructor thay vì chỉ theo mỗi Week như trước kia)
B3: copy code của weeklyTimetable2.jsp cũ sang file Timetable3.jsp mới để bắt đầu sửa .
B4: Ở file Timetable3.jsp: di chuyển phần select Week ra khỏi thẻ <form>. Viết hàm js để mỗi khi người dùng chọn một Week, thì sẽ tự động click vào một href để sang một trang mới (trang mới là trang cũ nhưng cập nhật lại Week).
B5: Xóa đi file jsp và servlet cũ.(những file đã bị thay thế ở B3 và B4) và file rác (servlet test.java)

--- a/Assignment/web/WEB-INF/web.xml
+++ b/Assignment/web/WEB-INF/web.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>timetable</servlet-name>
-        <servlet-class>controler.timetable</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>attendanceForALesson</servlet-name>
         <servlet-class>controler.attendanceForALesson</servlet-class>
     </servlet>
@@ -12,10 +8,14 @@
         <servlet-name>start</servlet-name>
         <servlet-class>controler.start</servlet-class>
     </servlet>
-    <servlet-mapping>
-        <servlet-name>timetable</servlet-name>
-        <url-pattern>/timetable</url-pattern>
-    </servlet-mapping>
+    <servlet>
+        <servlet-name>timetable2</servlet-name>
+        <servlet-class>controler.timetable2</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>timetable3</servlet-name>
+        <servlet-class>controler.timetable3</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>attendanceForALesson</servlet-name>
         <url-pattern>/attendanceForALesson</url-pattern>
@@ -23,6 +23,14 @@
     <servlet-mapping>
         <servlet-name>start</servlet-name>
         <url-pattern>/start</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>timetable2</servlet-name>
+        <url-pattern>/timetable2</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>timetable3</servlet-name>
+        <url-pattern>/timetable3</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
