Login,  user(Instructor) chỉ được chấm điểm danh của Lesson mà user(Instructor) đó dạy
B1: login cho Instructor (/loginForInstructor)
B2: user(Instructor) chỉ được chấm điểm danh của Lesson mà user(Instructor) đó dạy:
-bằng cách so sánh user(Instructor) với instructorID của Lesson đó để quyết định user có được phép chấm attend hay ko
-có 2 cách để lấy được instructorID của Lesson đó.
queri DB dựa theo LessonID hoặc, lấy luôn từ URL paramter.
Vì user có thể thay đổi URL parameter: thay InstructorID bằng id của mình để  có thể đánh điểm danh
cho nên cách này là không thể được. vậy nên em chọn cách : queri DB dựa theo LessonID

--- a/Assignment/web/WEB-INF/web.xml
+++ b/Assignment/web/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>timetable3</servlet-name>
         <servlet-class>controler.timetable3</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Login</servlet-name>
+        <servlet-class>controler.Login</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>attendanceForALesson</servlet-name>
         <url-pattern>/attendanceForALesson</url-pattern>
@@ -40,9 +44,13 @@
         </taglib>
     </jsp-config>
     -->
+    <servlet-mapping>
+        <servlet-name>Login</servlet-name>
+        <url-pattern>/loginForInstructor</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
-            30
+            5
         </session-timeout>
     </session-config>
 </web-app>
